added daa from dataworld

--- a/templates/covid_19.html
+++ b/templates/covid_19.html
@@ -17,9 +17,9 @@
 
 </head>
 <body>
-    <script>
-
-    </script>
+    <script type="text/javascript">
+            myVar = myFunc({{vars|tojson}})
+         </script>
 
     <div id="timeline"></div>
     <hr>
@@ -40,7 +40,7 @@
         <div class="tooltip">
             <p></p>
         </div>
-    </div> <!-- timeline
+    </div>  timeline
 
     <div class="info-box">
         <div class="panel"></div>
@@ -128,6 +128,7 @@
     </script>
 
 </body>
+    <script src="../static/js/data.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="../static/js/ex1.js"></script>
     <!--<script src="../static/js/ex2.js"></script>-->
