--- a/templates/covid_19.html
+++ b/templates/covid_19.html
@@ -27,8 +27,8 @@
             <div class="col-md-12">
                 <div class="header">
                     <div class="row">
-                        <div class="col-md-2">
-                            <a class=""><img src="../static/img/corona.webp" width="100px"></a>
+                        <div class="col-md-2" style="padding-top:0; margin-top: 0">
+                            <a class="im"><img src="../static/img/corona.webp" width="50px"></a>
                         </div>
 
                         <div class="col-md-6">
@@ -50,6 +50,15 @@
         <hr>
 
         <div class="row">
+            <div class="col-md-12">
+                <div id="map_legend"></div>
+                <div id="map"></div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
             <div class="col-md-7">
                 <div id="timeline"></div>
             </div>
@@ -61,18 +70,6 @@
 
         <hr>
 
-        <div class="row">
-            <div class="col-md-12">
-
-                <div class="container">
-                    <div id="map_legend"></div>
-                    <div id="map"></div>
-                </div>
-
-            </div>
-        </div>
-
-        <hr>
 
         <div class="row">
             <div class="col-md-12">
