--- a/templates/covid_19.html
+++ b/templates/covid_19.html
@@ -22,6 +22,7 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js" charset="utf-8"></script>
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
     <div>
         <div class="row">
             <div class="col-md-12">
@@ -84,8 +85,11 @@
 
 </body>
 
-    <script src="../static/js/data.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script>
+
+
+    </script>
     <script src="../static/js/ex1.js"></script>
     <script src="../static/js/topojson.v1.min.js"></script>
     <script src="../static/js/ex3.js"></script>
@@ -95,6 +99,10 @@
 
 
 <!--
+
+
+
+    <script src="../static/js/data.js"></script>
 <link href="../static/css/ex2.css" rel="stylesheet" type="text/css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.js"></script>
 <script type="text/javascript">myVar = myFunc()</script>
