--- a/templates/covid_19.html
+++ b/templates/covid_19.html
@@ -15,7 +15,16 @@
     <link href="../static/css/ex1.css" rel="stylesheet" type="text/css" />
     <link href="../static/css/ex3.css" rel="stylesheet" type="text/css" />
     <link href="../static/css/clusterpies.css" rel="stylesheet" type="text/css" />
+    <link href="../static/css/multiline.css" rel="stylesheet" type="text/css" />
+    <link href="../static/css/hbar.css" rel="stylesheet" type="text/css" />
+    <style>
 
+    .vl {
+      border-left: 2px solid red;
+      height: 100%;
+    }
+
+    </style>
 
 </head>
 <body>
@@ -48,8 +57,6 @@
             </div>
         </div>
 
-        <hr>
-
         <div class="row">
             <div class="col-md-12">
                 <div id="map_legend"></div>
@@ -60,6 +67,21 @@
         <hr>
 
         <div class="row">
+            <div class="col-md-5">
+                <div id="country_hbars"></div>
+            </div>
+
+
+            <div class="col-md-7">
+                <div class="svg-wrapper">
+                    <svg width="1000" height="400" class="svgML"></svg>
+                </div>
+            </div>
+
+        </div>
+
+        <!--
+            <div class="row">
             <div class="col-md-7">
                 <div id="timeline"></div>
             </div>
@@ -68,6 +90,7 @@
                 <div id="timeline-container"></div>
             </div>
         </div>
+        -->
 
         <hr>
 
@@ -86,14 +109,15 @@
 </body>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <script>
 
-
-    </script>
+  <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     <script src="../static/js/ex1.js"></script>
     <script src="../static/js/topojson.v1.min.js"></script>
     <script src="../static/js/ex3.js"></script>
     <script src="../static/js/marker_cluster.js"></script>
+    <script src="../static/js/multiline.js"></script>
+<script src="https://gist.githubusercontent.com/mscook/b21a1877cba76565937a/raw/84eca7af32928c8496b0db05ebdbea1ecc1cfc98/d3.v2.js"></script>
+    <script src="../static/js/hbar.js"></script>
 </html>
 
 
