--- a/templates/covid_19.html
+++ b/templates/covid_19.html
@@ -59,9 +59,9 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <div id="loadingMap" align="center">
+                <div id="loadingMap" align="center" style="margin-top: 100px">
                     <img src="../static/img/hands.gif" height="400px">
-                    <div class="">Please watch while we load data..</div>
+                    <h1 style="font-size:60px;">Please watch while we load data..</h1>
                 </div>
             </div>
         </div>
@@ -75,14 +75,19 @@
         <hr>
 
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-6">
+                <!--<div id="div1" style="height: 500px;position:relative;"></div>
+                <div id="div2" style="max-height:100%;overflow:auto;border:1px solid black;"></div>-->
+
                 <div id="country_hbars"></div>
+
+
             </div>
 
 
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <div class="svg-wrapper">
-                    <svg width="1000" height="400" class="svgML"></svg>
+                    <svg width="600" height="500" class="svgML"></svg>
                 </div>
             </div>
 
